Fix layout shift when marquee logos are not loaded yet (#1288)
* Fix layout shift when marquee logos are not loaded yet

* Convert units

--- a/src/components/Customers/styles.module.css
+++ b/src/components/Customers/styles.module.css
@@ -1,3 +1,7 @@
+.section {
+  height: 56px;
+}
+
 .logos {
   display: flex;
   align-content: center;
